@@ -505,8 +505,8 @@ Registered widgets are not yet implemented.
 
 \begin{verbatim*}
 <c:widget id="foo" type="date">
-  <param name="timezone" value="PST" />
-  <path-info value="/bla" />
+  <c:param name="timezone" value="PST" />
+  <c:path-info value="/bla" />
 </c:widget>
 \end{verbatim*}
 
@@ -524,7 +524,7 @@ input came from the template or from the user's browser.
 
 \begin{verbatim*}
 <c:widget id="foo" type="date">
-  <header name="X-CM4all-Foo" value="Bar" />
+  <c:header name="X-CM4all-Foo" value="Bar" />
 </c:widget>
 \end{verbatim*}
 
